Add new metadata table domain fields, upgrade script