@@ -3,6 +3,7 @@ package org.labkey.assay.plate;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.json.JSONObject;
+import org.labkey.api.collections.CaseInsensitiveHashMap;
 import org.labkey.api.collections.CaseInsensitiveHashSet;
 import org.labkey.api.data.Container;
 import org.labkey.api.data.DbSchema;
@@ -15,6 +16,8 @@ import org.labkey.api.exp.Lsid;
 import org.labkey.api.exp.TemplateInfo;
 import org.labkey.api.exp.property.BaseAbstractDomainKind;
 import org.labkey.api.exp.property.Domain;
+import org.labkey.api.exp.property.DomainProperty;
+import org.labkey.api.exp.property.Lookup;
 import org.labkey.api.exp.property.PropertyService;
 import org.labkey.api.gwt.client.model.GWTDomain;
 import org.labkey.api.gwt.client.model.GWTPropertyDescriptor;
@@ -23,9 +26,12 @@ import org.labkey.api.security.permissions.AdminPermission;
 import org.labkey.api.util.UnexpectedException;
 import org.labkey.api.view.ActionURL;
 import org.labkey.api.writer.ContainerUser;
+import org.labkey.assay.plate.query.AmountUnitsTable;
+import org.labkey.assay.plate.query.ConcentrationUnitsTable;
+import org.labkey.assay.plate.query.PlateSchema;
 
-import java.util.Collections;
-import java.util.List;
+import java.util.Arrays;
+import java.util.Map;
 import java.util.Set;
 
 public class PlateMetadataDomainKind extends BaseAbstractDomainKind
@@ -33,32 +39,50 @@ public class PlateMetadataDomainKind extends BaseAbstractDomainKind
     public static final String KIND_NAME = "PlateMetadata";
     public static final String DOMAiN_NAME = "PlateMetadataDomain";
     private static final Set<String> RESERVED_NAMES;
+    private static final Set<PropertyStorageSpec.Index> INDEXES;
+    private static final Set<PropertyStorageSpec> REQUIRED_PROPS;
     private static final String PROVISIONED_SCHEMA_NAME = "assaywell";
+
+    public enum Column
+    {
+        Amount,
+        AmountUnits,
+        Col,
+        Concentration,
+        ConcentrationUnits,
+        Container,
+        Created,
+        CreatedBy,
+        Dilution,
+        Lsid,
+        Modified,
+        ModifiedBy,
+        PlateId,
+        Position,
+        Row,
+        RowId,
+        SampleId,
+        Type,
+        Value,
+        WellGroup
+    }
 
     static
     {
-        RESERVED_NAMES = new CaseInsensitiveHashSet(List.of(
-                "rowId",
-                "lsid",
-                "created",
-                "createdBy",
-                "modified",
-                "modifiedBy",
-                "container",
-                "value",
-                "dilution",
-                "plateId",
-                "row",
-                "col",
-                "sampleId",
-                "amount",
-                "amountunits",
-                "concentration",
-                "concentrationunits",
-                "group",
-                "position",
-                "type"
-        ));
+        RESERVED_NAMES = new CaseInsensitiveHashSet(Arrays.stream(Column.values()).map(Enum::name).toList());
+        INDEXES = Set.of(new PropertyStorageSpec.Index(true, Column.Lsid.name()));
+        REQUIRED_PROPS = Set.of(
+                new PropertyStorageSpec(Column.Amount.name(), JdbcType.DOUBLE),
+                new PropertyStorageSpec(Column.AmountUnits.name(), JdbcType.VARCHAR, 60),
+                new PropertyStorageSpec(Column.Concentration.name(), JdbcType.DOUBLE),
+                new PropertyStorageSpec(Column.ConcentrationUnits.name(), JdbcType.VARCHAR, 60)
+        );
+    }
+
+    @Override
+    public Set<PropertyStorageSpec.Index> getPropertyIndices(Domain domain)
+    {
+        return INDEXES;
     }
 
     @Override
@@ -75,7 +99,23 @@ public class PlateMetadataDomainKind extends BaseAbstractDomainKind
     @Override
     public Set<PropertyStorageSpec> getBaseProperties(Domain domain)
     {
-        return Collections.singleton(new PropertyStorageSpec("Lsid", JdbcType.VARCHAR, 200).setNullable(false));
+        return Set.of(
+                new PropertyStorageSpec(Column.Lsid.name(), JdbcType.VARCHAR, 200).setNullable(false),
+                new PropertyStorageSpec(Column.Amount.name(), JdbcType.DOUBLE),
+                new PropertyStorageSpec(Column.AmountUnits.name(), JdbcType.VARCHAR, 60),
+                new PropertyStorageSpec(Column.Concentration.name(), JdbcType.DOUBLE),
+                new PropertyStorageSpec(Column.ConcentrationUnits.name(), JdbcType.VARCHAR, 60)
+        );
+    }
+
+
+    @Override
+    public Set<PropertyStorageSpec.ForeignKey> getPropertyForeignKeys(Container container)
+    {
+        return Set.of(
+                new PropertyStorageSpec.ForeignKey(Column.AmountUnits.name(), PlateSchema.SCHEMA_NAME, AmountUnitsTable.NAME, "Value", null, false),
+                new PropertyStorageSpec.ForeignKey(Column.ConcentrationUnits.name(), PlateSchema.SCHEMA_NAME, ConcentrationUnitsTable.NAME, "Value", null, false)
+        );
     }
 
     @Override
@@ -85,6 +125,7 @@ public class PlateMetadataDomainKind extends BaseAbstractDomainKind
         {
             String domainURI = generateDomainURI(container);
             Domain metadataDomain = PropertyService.get().createDomain(container, domainURI, domain.getName(), templateInfo);
+            //ensureDomainProperties(metadataDomain, container);
             metadataDomain.save(user);
 
             return PropertyService.get().getDomain(container, domainURI);
@@ -92,6 +133,36 @@ public class PlateMetadataDomainKind extends BaseAbstractDomainKind
         catch (Exception e)
         {
             throw UnexpectedException.wrap(e);
+        }
+    }
+
+    private void ensureDomainProperties(Domain domain, Container container)
+    {
+        String typeUri = domain.getTypeURI();
+        Map<String, PropertyStorageSpec.ForeignKey> foreignKeyMap = new CaseInsensitiveHashMap<>();
+
+        for (PropertyStorageSpec.ForeignKey fk : getPropertyForeignKeys(container))
+        {
+            foreignKeyMap.put(fk.getColumnName(), fk);
+        }
+
+        for (PropertyStorageSpec spec : REQUIRED_PROPS)
+        {
+            DomainProperty prop = domain.addProperty();
+
+            prop.setName(spec.getName());
+            prop.setPropertyURI(typeUri + "#" + spec.getName());
+            prop.setRangeURI(spec.getTypeURI());
+            prop.setScale(spec.getSize());
+            prop.setRequired(!spec.isNullable());
+
+            if (foreignKeyMap.containsKey(spec.getName()))
+            {
+                PropertyStorageSpec.ForeignKey fk = foreignKeyMap.get(spec.getName());
+                Lookup lookup = new Lookup(null, fk.getSchemaName(), fk.getTableName());
+
+                prop.setLookup(lookup);
+            }
         }
     }
 
